--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "ng-admin-demo",
+  "name": "DockerNode",
   "version": "0.0.2",
-  "author": "François Zaninotto",
-  "license": "MIT"
+  "author": "Moiz Kantawala",
+  "license": "MIT",
+   "dependencies": {
+    "express": "3.2.4"
+  }
 }
